# sawyer_control

./: .gitignore  CMakeLists.txt  README.md  debug.py  exp_nodes.launch  exp_nodes2.launch  exp_nodes_torque.launch  joint_angle_pd_controller.py  package.xml  position_pd_controller.py  python3_requirements.txt  sawyer_env_base.py  sawyer_env_tester.py  sawyer_reaching.py  setup.py  system_python_requirements.txt  typescript
msg/: actions.msg  angle_action.msg  observations.msg
scripts/: actions_client.py  actions_publisher.py  actions_server.py  actions_subscriber.py  angle_action_publisher.py  angle_action_server.py  angle_action_subscriber.py  ik_client.py  ik_server.py  image_client.py  image_server.py  impedance_controller.py  jacobian_client.py  jacobian_server.py  joint_space_impd_subscriber.py  new_base_exp_nodes.launch  observations_client.py  observations_publisher.py  observations_server.py  observations_subscriber.py  robot_controller.py
scripts/~/Documents/traj_group0/traj1/depth_images/: main_depth_im1_time1.pkl
src/sawyer_control/: .env_tester.py.swp  collect_vae_data_torque.py  config.py  env_tester.py  hello  inverse_kinematics.py  joint_angle_pd_controller.py  position_pd_controller.py  random_ou_process.py  sawyer_env_base.py  sawyer_env_base_pos_control.py  sawyer_env_base_r.py  sawyer_env_pd_tester.py  sawyer_env_tester.py  sawyer_image.py  sawyer_pushing.py  sawyer_reaching.py  wrappers.py
src/sawyer_control/configs/: austri_config.py  base_config.py  config.py  ros_config.py
src/sawyer_control/core/: eval_util.py  image_env.py  multitask_env.py
src/sawyer_control/dynamixel/: dynamixel_py.py
src/sawyer_control/dynamixel/DynamixelSDK/: .gitignore  .travis.yml  CONTRIBUTING.md  Doxyfile  README.md  ReleaseNote.txt
src/sawyer_control/dynamixel/DynamixelSDK/.github/: ISSUE_TEMPLATE.md
src/sawyer_control/dynamixel/DynamixelSDK/c++/: CHANGELOG.rst  CMakeLists.txt  README.md  library.properties  package.xml
src/sawyer_control/dynamixel/DynamixelSDK/c++/example/dxl_monitor/: dxl_monitor.cpp
src/sawyer_control/dynamixel/DynamixelSDK/c++/example/protocol1.0/reset/: reset.cpp
src/sawyer_control/dynamixel/DynamixelSDK/c++/example/protocol2.0/factory_reset/: factory_reset.cpp
src/sawyer_control/dynamixel/DynamixelSDK/c++/example/protocol2.0/read_write/: read_write.cpp
src/sawyer_control/dynamixel/DynamixelSDK/c++/include/dynamixel_sdk/: packet_handler.h  protocol1_packet_handler.h  protocol2_packet_handler.h
src/sawyer_control/dynamixel/DynamixelSDK/c++/src/dynamixel_sdk/: protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
src/sawyer_control/dynamixel/DynamixelSDK/labview/protocol2.0/: read_write.vi
src/sawyer_control/dynamixel/DynamixelSDK/matlab/protocol1.0/: bulk_read.m  factory_reset.m  multi_port.m  ping.m  read_write.m  sync_write.m
src/sawyer_control/dynamixel/DynamixelSDK/matlab/protocol2.0/: broadcast_ping.m  bulk_read_write.m  factory_reset.m  indirect_address.m  multi_port.m  ping.m  read_write.m  rebooting.m  sync_read_write.m
src/sawyer_control/dynamixel/DynamixelSDK/python/dynamixel_functions_py/: dynamixel_functions.py
src/sawyer_control/dynamixel/DynamixelSDK/python/protocol1_0/: bulk_read.py  ping.py  (+4 more)
src/sawyer_control/environments/: sawyer_env_base.py  sawyer_pushing.py  sawyer_reaching.py  shikhar_sawyer_reaching.py
src/sawyer_control/envs/: sawyer_door.py  sawyer_env_base.py  sawyer_env_base_image.py  sawyer_pushing.py  sawyer_reaching.py
src/sawyer_control/examples/: check_pd_controller_accuracy.py  env_tester.py  get_safety_box.py  image_tester.py  pusher_tester.py  sawyer_env_pd_tester.py
src/sawyer_control/pd_controllers/: impedance_controller.py  inverse_kinematics.py  joint_angle_pd_controller.py
srv/: action.srv  angle_action.srv  getRobotPoseAndJacobian.srv  ik.srv  image.srv  observation.srv
(+83 files in other folders)
